# Parallax

./: .gitignore  README.md  generate-icons.py  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/pages/: Dashboard.css  Dashboard.tsx  Login.css  Login.tsx
