[package]
name = "parallax"
version = "0.1.0"
description = "A Self-Optimizing, Multi-Model IDE"
authors = ["Parallax Team"]
edition = "2021"

[lib]
name = "parallax_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
